<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/person_main_background"
    tools:context=".Person_Main_Interface_Activity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/emergencyButton"
            android:layout_width="258dp"
            android:layout_height="79dp"
            android:background="@drawable/emergency_helpbuttondesign"
            android:contentDescription="@string/emegrency_help"
            android:text="@string/emegrency_help"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.423" />

        <Button
            android:id="@+id/specificProblemsButton"
            android:layout_width="258dp"
            android:layout_height="79dp"
            android:background="@drawable/specific_button"
            android:contentDescription="@string/specific_button"
            android:text="@string/specific_button"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.625" />

        <Button
            android:id="@+id/openDrawerButton"
            android:layout_width="81dp"
            android:layout_height="81dp"

            android:layout_marginStart="312dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/iconprofile"
            android:contentDescription="@string/userProfile"
            android:onClick="openDrawer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/headerImage"
            android:layout_width="411dp"
            android:layout_height="128dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/top_title" />

        <ImageView
            android:id="@+id/logoimg"
            android:layout_width="124dp"
            android:layout_height="132dp"
            android:layout_marginStart="4dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <ImageView
            android:id="@+id/logotitle"
            android:layout_width="157dp"
            android:layout_height="53dp"
            android:layout_marginStart="128dp"
            android:layout_marginTop="43dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/headerImage"
            app:srcCompat="@drawable/icon_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
